# mcstatus-fastapi

./: .gitignore  README.md  Spacefile  main.py  pyproject.toml  requirements.txt
