[tool.poetry]
name = "mcstatus-fastapi"
version = "0.1.0"
description = ""
authors = ["PerchunPak <mcstatus-fastapi.author@perchun.it>"]
readme = "README.md"
packages = [{include = "main"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
mcstatus = "11.0.0a1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
